[build-system]
requires = ["setuptools >=  61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "testfrw"
version = "0.0.1"
dependencies = []

# most updates for Lib/enum.py where in python 3.11 (https://docs.python.org/3/library/enum.html)
# maybe to get rid of enums in this project? :)
requires-python = ">= 3.8"

authors = [
  {name = "Aliaksandr Klimovich", email = "aliaksandr_klimovich@icloud.com"},
]
description = "Yet another test framework..."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["testfrw"]

[project.urls]
Repository = "https://github.com/aliaksandr-klimovich/test-frw"
